--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow" id="header4-2" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow" id="header4-2" data-bg-video="https://www.youtube.com/embed/nVFFvHsyRyA?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -45,7 +45,7 @@
 </section>
 
 
-  <section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
