--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="mbr-section col-md-10 col-md-offset-2 text-xs-right">
 
-                    <h1 class="mbr-section-title display-1">DEV PORTOFOLIO</h1>
+                    <h1 class="mbr-section-title display-1">SALUTARI DE PE SITE-UL MEU</h1>
                     <p class="mbr-section-lead lead">Welcome to what will soon be a website dedicated to my projects.<br><em>by &nbsp;Adrian Ciurescu</em></p>
                     
                 </div>
